--- a/configs/trainer_config.yaml
+++ b/configs/trainer_config.yaml
@@ -1,8 +1,9 @@
 # ModelArguments
 model_name_or_path: gpt2
-dataset_location: sample_grouped_owt_morph15k_50k_2048
+dataset_name_or_path: sample_grouped_owt_morph15k_50k_2048 # /pfss/mlde/workspaces/mlde_wsp_MorphPiece/data/fineweb-edu/grouped_owt_morph15k_50k_1024
 tokenizer_name_or_path: /pfss/mlde/workspaces/mlde_wsp_MorphPiece/data/tokenizers_50k/gpt2-owt-morph15k
 seq_len: 1024
+attn_implementation: flash_attention_2 # eager, flash_attention_2, sdpa
 
 # TrainingArguments
 accelerator_config:
@@ -14,13 +15,13 @@ accelerator_config:
     use_seedable_sampler: true
 adafactor: false
 adam_beta1: 0.9
-adam_beta2: 0.999
+adam_beta2: 0.95
 adam_epsilon: 1.0e-08
 auto_find_batch_size: false
 batch_eval_metrics: false
 bf16: true # changed from default false
 bf16_full_eval: false
-data_seed: null
+data_seed: 42
 dataloader_drop_last: false
 dataloader_num_workers: 8 # changed from default 0
 dataloader_persistent_workers: false
@@ -43,7 +44,7 @@ eval_delay: 0
 eval_do_concat_batches: true
 eval_on_start: false
 eval_steps: null
-eval_strategy: 'no'
+eval_strategy: 'steps'
 eval_use_gather_object: false
 evaluation_strategy: null
 fp16: false
@@ -78,31 +79,31 @@ include_tokens_per_second: false
 jit_mode_eval: false
 label_names: null
 label_smoothing_factor: 0.0
-learning_rate: 5.0e-05
+learning_rate: 6.0e-04 # changed from default 
 length_column_name: length
 load_best_model_at_end: false
-local_rank: 0
+local_rank: -1 # changed from default 0
 log_level: passive
 log_level_replica: warning
 log_on_each_node: true
-logging_dir: /tmp/runs/Aug07_07-21-37_0aa80e0c0e0b
+logging_dir: /pfss/mlde/workspaces/mlde_wsp_MorphPiece/det_exps/tb_logs/
 logging_first_step: false
 logging_nan_inf_filter: true
-logging_steps: 500
+logging_steps: 10
 logging_strategy: steps
-lr_scheduler_kwargs: {}
-lr_scheduler_type: linear
+lr_scheduler_kwargs: {'pct_cooldown': 0.8, 'step_cooldown': 90}
+lr_scheduler_type: constant_with_warmup # changed from default linear
 max_grad_norm: 1.0
-max_steps: -1
+max_steps: 100 # changed from default -1
 metric_for_best_model: null
 mp_parameters: ''
 neftune_noise_alpha: null
 no_cuda: false
-num_train_epochs: 1.0 # changed from default 3.0
+num_train_epochs: -1 # changed from default 3.0
 optim: adamw_torch
 optim_args: null
 optim_target_modules: null
-output_dir: /tmp
+output_dir: /pfss/mlde/workspaces/mlde_wsp_MorphPiece/det_exps/gpt2_morph15k_1024_test
 overwrite_output_dir: false
 past_index: -1
 per_device_eval_batch_size: 64 # changed from default 8
@@ -116,9 +117,10 @@ ray_scope: last
 remove_unused_columns: true
 report_to:
 - tensorboard
+#- wandb
 restore_callback_states_from_checkpoint: false
 resume_from_checkpoint: null
-run_name: /tmp
+run_name: gpt2_morph15k_1024_test
 save_on_each_node: false
 save_only_model: false
 save_safetensors: true
@@ -141,5 +143,5 @@ use_ipex: false
 use_legacy_prediction_loop: false
 use_mps_device: false
 warmup_ratio: 0.0
-warmup_steps: 0
-weight_decay: 0.0
+warmup_steps: 10 # changed from default 0
+weight_decay: 0.1 # changed from default 0.0
