--- a/configs/ds_configs/ds_config_stage1.json
+++ b/configs/ds_configs/ds_config_stage1.json
@@ -21,7 +21,7 @@
       "module_depth": -1,
       "top_modules": 1,
       "detailed": true,
-      "output_file": "profile_gpt2_stage1.txt"
+      "output_file": "ds_profiles/profile_gpt2_stage1.txt"
     }
   }
   
